--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "url": "git://github.com/row1/react-declarative-d3.git"
   },
   "dependencies": {
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-dsv": "^1.0.8",
     "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
