--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "d3-axis": "^1.0.8",
     "d3-dsv": "^1.0.8",
     "d3-scale": "^2.0.0",
+    "d3-scale-chromatic": "^1.2.0",
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
