--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-dsv": "^1.0.8",
+    "d3-ease": "^1.0.3",
     "d3-scale": "^2.0.0",
     "d3-scale-chromatic": "^1.2.0",
     "d3-selection": "^1.3.0",
