--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.1",
     "gh-pages": "^1.1.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
