--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.1",
+    "drrr": "^0.0.1",
     "gh-pages": "^1.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
